<resources>
    <string name="app_name">Grocito</string>

    <string name="facebook_app_id">764885463947781</string>
    <string name="razorpay_key">rzp_live_3Psac1T1qEddGl</string>
    <string name="google_key">AIzaSyBTeuBxlcuFM8nC-OIkoxz4vqyGQA2OJ40</string>

    <string name="api_hiting">Please wait…</string>
    <string name="network_error_msg">Sorry! Not connected to internet</string>
    <string name="next">Next</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="supermarket_in_n_your_mobile">Supermarket in \nyour mobile</string>
    <string name="lorem_ipsum">lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="grocito_provided_door_step_delivery">Grocito provided \nDoor step delivery</string>
    <string name="easy_payment_option_to_pay">Easy payment \noption to pay</string>
    <string name="sign">Sign</string>
    <string name="please_enter_registered_mobile_number">Please Enter Your Registered \nMobile Number</string>
    <string name="login_using_otp">Login using otp</string>
    <string name="ingredients">Ingredients</string>
    <string name="gps_setting">GPS is settings</string>
    <string name="gps_setting_menu">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_and_condition">Terms and Conditions</string>
    <string name="pack_sizes">Select Pack Sizes</string>
    <string name="similar_products">Similar Products</string>
    <string name="save_for_later">Save for Later</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="promo_code_can_be_applied_on_payment_page">Promo code can be applied on payment page</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="done">Done</string>
    <string name="standard">Standard</string>
    <string name="express">Express</string>
    <string name="_10_00_am_12_00_pm">10:00 AM - 12:00 PM</string>
    <string name="order_will_be_delivered_within_45_minutes_n_between_9am_to_8pm">Order will be delivered within 45 minutes \n between 9AM to 8PM</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="suggest_a_new">Suggest a new product</string>
    <string name="shop_by_cat">Shop by category</string>
    <string name="cancel_return">Cancellations and Returns</string>
    <string name="notification">Notification</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="my_order">My Order</string>
    <string name="my_wallet">My Wallet</string>
    <string name="refer_earm">Refer &amp; Earn</string>
    <string name="my_profile">My Profile</string>
    <string name="support">Help &amp; Support </string>
    <string name="add_change_address"><![CDATA[Add & Change Address]]></string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="cod_cash_of_delivery">Cash On Delivery</string>
    <string name="pay_now">Pay Now</string>
    <string name="place_order">Place Order</string>
    <string name="success_order">Success Order</string>
    <string name="thank_you_for_shoping">Thank you for shopping</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="payment">Payment</string>
    <string name="add_address">Add Address</string>
    <string name="update_address">Update Address</string>
    <string name="personal_details">Personal Details</string>
    <string name="enter_first_name">First name</string>
    <string name="contact_number_to_say_hello">Contact number to say hello</string>
    <string name="address_details">Address Details</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="choose_nick_name_for_this_address">Choose nick name for this address</string>
    <string name="set_this_as_my_default_delivery_address">Set this as my default delivery address</string>
    <string name="add_new_address">"Add New Address"</string>
    <string name="edit_address">"Edit Address"</string>
    <string name="my_delivery_address">My Delivery Address</string>
    <string name="raising_complaints">Raising Complaints</string>
    <string name="Please_BACK_again_to_exit">Please BACK again to exit</string>

    <string-array name="ReasonsArray">
        <item>Reason 1</item>
        <item>Reason 2</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="cart">Cart</string>
    <string name="Are_you_sure_to_logout">Do you want to logout?</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="choose_current_location">Choose current location</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="search_for_you_delivery_locatin">Search Address</string>
    <string name="user_this_location">Use this Location</string>
    <string name="seeall">View All</string>
    <string name="search_for_products">Search for Products</string>
    <string name="_1">1</string>
    <string name="phone_number">Mobile Number</string>
    <string name="don_t_have_an_account">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="up">" up"</string>
    <string name="email_id">Email id</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="have_an_account">Already an User?</string>
    <string name="sign_in">Sign in</string>
    <string name="otp">OTP</string>
    <string name="an_otp_has_been_sent_to_your_registered_mobile_number">An OTP has been sent to your registered mobile number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="enter_last_name">Last name</string>
    <string name="product_details">Product Details</string>
    <string name="select_seller">Select Seller</string>
    <string name="select_color">Select Color</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="razorpay">Razorpay</string>
    <string name="flat_house_office_no">Flat/House/Office No.</string>
    <string name="street_society_office_name">Street/Society/Office Name</string>
    <string name="state">State</string>
    <string name="total_payable">Total Payable</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="please_wait_n_don_t_press_back_button_and_cancel">Please Wait... \n Don\'t Press Back Button And Cancel</string>
    <string name="payment_details">Payment Details</string>
    <string name="sgst_amount">SGST Amount</string>
    <string name="cgst_amount">CGST Amount</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="delivery_slot">Delivery Slot</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="order_status">Order Status</string>
    <string name="update">Update</string>
    <string name="add_wallet_amount">Add Wallet Amount</string>
    <string name="available_amount">Available Amount</string>
    <string name="grocito_wallet">Grocito Wallet</string>
    <string name="referral_wallet">Referral Wallet</string>
    <string name="copy_url">Copy Url</string>
    <string name="share_your_referral_link">Share Your Referral Link</string>
    <string name="share_on_social_media">Share On Social Media</string>
    <string name="share_with_facebook">Share With FaceBook</string>
    <string name="share_with_whatsapp">Share with WhatsApp</string>
    <string name="share_with_email">Share with Email</string>
    <string name="refer_a_friend">REFER A FRIEND</string>
    <string name="refer_a_friend_des">Are you a social magnet? Earn some money by telling your friends about Payoneer. \n

Get started by logging in to your Payoneer account. Spread the word by sharing your unique sign up link through blog posts, articles, emails, Facebook posts and tweets. You’ll get paid for every new friend that signs up to Payoneer through your link.</string>
    <string name="email_address">Email Address</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="call_request">Call Request</string>
    <string name="check_availability">Check Availability</string>
    <string name="enter_pincode">Enter PinCode</string>
    <string name="addmoneytowallet">Add money to wallet</string>
    <string name="sunday_bazar">Sunday Bazaar</string>
    <string name="grocito_exclusive">Grocito Exclusive</string>
    <string name="new_arrival">New Arrival</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="comment">Comment</string>
    <string name="select_rating">Select Rating</string>
    <string name="submit">Submit</string>
    <string name="review_rating">Review Rating</string>
    <string name="exchange">Exchange</string>
    <string name="select_reason">Select Reason</string>
    <string name="customer_review">Customer Review</string>
    <string name="live_chat">Live Chat</string>
    <string name="no_new_items">No new items</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="current_search_location">Current/Search Location</string>
</resources>
