<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/material_Progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:indicator="LineScale"
            app:indicator_color="@color/colorPrimaryDark" />
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestScrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/viewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/md_blue_grey_50" />

                    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                        android:id="@+id/dots_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:dotsColor="@color/colorPrimary"
                        app:dotsSize="@dimen/_7sdp"
                        app:dotsStrokeWidth="0.5dp">

                    </com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator>

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_bold"
                        android:gravity="center"
                        android:text="Offer Zone"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    android:id="@+id/firstBannerRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/offer_item_home"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shop_by_cat"
                        android:gravity="center"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_slab_bold" />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shopbyCatRecyclerView"
                    tools:itemCount="1"
                    tools:listitem="@layout/category_item_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:id="@+id/seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_3sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/round_conner_btn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/seeall"
                    />
                <ImageView
                    android:id="@+id/middleImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:scaleType="fitXY" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/NewArrivalLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:text="@string/new_arrival"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/roboto_slab_bold" />

                        <TextView
                            android:id="@+id/seeAllNew"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_3sdp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:background="@drawable/round_conner_btn"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:text="@string/seeall"
                            />

                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:background="@color/back_shad_color"
                        android:id="@+id/newRecyclerView"
                        tools:itemCount="1"
                        tools:listitem="@layout/baverges_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/sundayLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/catName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            android:text="@string/sunday_bazar"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/roboto_slab_bold" />

                        <TextView
                            android:id="@+id/seeAllSun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_3sdp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:background="@drawable/round_conner_btn"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:text="@string/seeall"
                            android:layout_marginBottom="@dimen/_5sdp"
                            />

                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/back_shad_color"
                        android:id="@+id/sunRecyclerView"
                        tools:itemCount="1"
                        tools:listitem="@layout/baverges_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/grocitoExLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:text="@string/grocito_exclusive"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/roboto_slab_bold" />

                        <TextView
                            android:id="@+id/seeAllExl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_3sdp"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:background="@drawable/round_conner_btn"
                            android:fontFamily="@font/roboto_slab_bold"
                            android:text="@string/seeall"
                            android:layout_marginBottom="@dimen/_5sdp"
                            />

                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@color/back_shad_color"
                        android:id="@+id/exlRecyclerView"
                        tools:itemCount="1"
                        tools:listitem="@layout/baverges_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/TopRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="2"
                    tools:listitem="@layout/home_item" />


                <ImageView
                    android:id="@+id/bottomBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/other" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/isSpecialHeadTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textSize="23sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_slab_bold" />


                </LinearLayout>

                <RelativeLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    android:elevation="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:cardUseCompatPadding="true"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/isSpecialImage"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_150sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:scaleType="fitXY" />
                    </androidx.cardview.widget.CardView>


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:background="@color/white"
                    tools:itemCount="2"
                    tools:listitem="@layout/other_item"
                    android:id="@+id/isSpecialRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>